--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+       <title></title>
 </head>
-<body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+  <body>
+      <div class="slider-area position-relative fix">
+            <div class="slider-active">
+                <div class="single-slider slider-height d-flex align-items-center">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-8 col-lg-9 col-md-11 col-sm-10">
+                                <div class="hero__caption">
+                                    <span data-animation="fadeInUp" data-delay="0.2s">Dengan Kami IT PEDIA</span>
+                                    <h1 data-animation="fadeInUp" data-delay="0.5s"> memberikan saran dan masukan alam menggunakan teknologi dengan harapan memenuhi tujuan bisnis perusahaan ataupun mengatasi masalah klien. </h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>          
+                </div>
 </body>
 </html>
