--- a/index.html
+++ b/index.html
@@ -48,5 +48,33 @@
                 </div>
 
 </body>
+<footer>
+    <div class="footer">
+        <h1 style="color:green; font-family: 'Times New Roman', Times, serif; margin-left: 30px;">CODE PEDIA</h1>
+        <ul>
+            <li class="phone">
+                email:itpdeia@gmail.com
+            </li>
+            <li>
+                phone: (021) 1934 1944
+            </li>
+            <li>
+                mobile: 0833 4334 3443
+            </li>
+        </ul>
+        <ul>
+            <li class="sosialmedia">
+                Instagram: @IT_PEDIA
+            </li>
+            <li>
+                Facebook: IT_PEDIA
+            </li>
+            <li>
+                Twitter: IT_PEDIA
+            </li>
+        </ul>
+    </div>
+</footer>
+	   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </html>
