--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1 style="color:green; font-family: 'Times New Roman', Times, serif; margin-left: 30px;">CODE PEDIA</h1>
         <ul>
             <li class="phone">
-                email:itpdeia@gmail.com
+                email:itpedia@gmail.com
             </li>
             <li>
                 phone: (021) 1934 1944
